--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -5,4 +5,5 @@ jobs:
   print-secret:
     runs-on: ubuntu-latest
     steps:
-      - run: run.sh
+      - uses: actions/checkout@v3
+      - run: ./run.sh
