--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -2,7 +2,7 @@ name: pipeline
 run-name: ${{ github.actor }} is creating his first pipeline
 on: [push]
 jobs:
-  print-secret:
+  use-bash-shell-script:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
