--- a/.github/workflows/secret-action-pipeline.yml
+++ b/.github/workflows/secret-action-pipeline.yml
@@ -6,5 +6,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - env: 
-          secret = ${{secrets.MY_MAXIMUM_SECURITY_SECRET}}
+          secret: ${{secrets.MY_MAXIMUM_SECURITY_SECRET}}
         run: echo $secret
