--- a/.github/workflows/remote-command-pipeline.yml
+++ b/.github/workflows/remote-command-pipeline.yml
@@ -14,4 +14,6 @@ jobs:
         username: ${{ secrets.USERNAME }}
         password: ${{ secrets.PASSWORD }}
         port: 22
-        script: echo "Hello World"
+        script: | 
+          whoami
+          ls -al
