--- a/.github/workflows/remote-command-pipeline.yml
+++ b/.github/workflows/remote-command-pipeline.yml
@@ -14,6 +14,4 @@ jobs:
         username: ${{ secrets.USERNAME }}
         password: ${{ secrets.PASSWORD }}
         port: 22
-        script: | 
-          whoami
-          ls -al
+        script: whoami
