added simple jest and added it to the pipeline

--- a/.github/workflows/secret-action-pipeline.yml
+++ b/.github/workflows/secret-action-pipeline.yml
@@ -2,7 +2,7 @@ name: Secret action
 run-name: ${{ github.actor }} is creating a pipeline containing a secret action
 on: [push]
 jobs:
-  use-bash-shell-script:
+  use-secret-action:
     runs-on: ubuntu-latest
     steps:
       - env: 
