--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -60,15 +60,21 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.20.2",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-typescript": "^7.18.6",
     "@cypress/code-coverage": "^3.10.0",
     "@cypress/instrument-cra": "^1.4.0",
     "@faker-js/faker": "^7.4.0",
+    "@jest/globals": "^29.3.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/react-hooks": "^3.4.1",
     "@testing-library/user-event": "^13.5.0",
     "axios-mock-adapter": "^1.18.2",
+    "babel-jest": "^29.3.1",
     "cypress": "^10.6.0",
+    "jest": "^29.3.1",
     "react-is": "^16.13.1",
     "react-test-renderer": "^18.2.0",
     "start-server-and-test": "^1.14.0"
