--- a/.github/workflows/cypress-test-pipeline.yml
+++ b/.github/workflows/cypress-test-pipeline.yml
@@ -2,7 +2,7 @@ name: Cypress
 run-name: ${{ github.actor }} is creating a pipeline to cypress
 on: [push]
 jobs:
-  run-jest:
+  run-cypress:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
