--- a/.github/workflows/cypress-test-pipeline.yml
+++ b/.github/workflows/cypress-test-pipeline.yml
@@ -2,6 +2,39 @@ name: Cypress
 run-name: ${{ github.actor }} is creating a pipeline to cypress
 on: [push]
 jobs:
+
+  push_to_registry:
+    name: Push Docker image to Docker Hub
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v3
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: build image
+        run: docker build . --file Dockerfile --tag ${{ secrets.DOCKER_USERNAME }}/pipeline-backend:latest
+
+      - name: Push image
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/pipeline-backend
+
+      - name: deploy on server
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          password: ${{ secrets.PASSWORD }}
+          port: 22
+          script:
+            docker-compose down
+            docker rmi ${{ secrets.DOCKER_USERNAME }}/pipeline-backend --force
+            docker pull ${{ secrets.DOCKER_USERNAME }}/pipeline-backend --force
+            docker-compose up -d
+
   run-cypress:
     runs-on: ubuntu-latest
     steps:
