--- a/.github/workflows/cypress-test-pipeline.yml
+++ b/.github/workflows/cypress-test-pipeline.yml
@@ -37,6 +37,8 @@ jobs:
             docker pull ${{ secrets.DOCKER_USERNAME }}/pipeline-backend --force
             docker-compose up -d
 
+      - run: yarn cypress run
+
   run-cypress:
     needs: push_to_registry
     runs-on: ubuntu-latest
